[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Other/PauseMenu2.gd" type="Script" id=1]
[ext_resource path="res://Other/Game_UI_Theme.tres" type="Theme" id=2]
[ext_resource path="res://Other/Font_Pasting.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/Effects/pauseAudio.gd" type="Script" id=4]

[sub_resource type="Gradient" id=2]
interpolation_mode = 2
colors = PoolColorArray( 0, 0.320313, 1, 0.188235, 0, 0.460938, 1, 0 )

[sub_resource type="GradientTexture2D" id=3]
gradient = SubResource( 2 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )
fill_to = Vector2( 0.85, 0.15 )

[node name="PauseMenu2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="pauseAudio" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00392157, 0, 0.054902, 0.490196 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Settings_BG" type="Sprite" parent="CenterContainer"]
position = Vector2( 960, 540 )
scale = Vector2( 6, 7 )
texture = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
modulate = Color( 0.654902, 0.729412, 1, 1 )
light_mask = 0
margin_left = 890.0
margin_top = 432.0
margin_right = 1030.0
margin_bottom = 647.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 63, 53 )
custom_constants/separation = 8

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
light_mask = 0
margin_right = 140.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "~    Game Paused    ~"
align = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 140.0
margin_bottom = 30.0

[node name="VolSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 140.0
margin_bottom = 67.0
theme = ExtResource( 2 )
max_value = 1.0
step = 0.05
value = 1.0
ticks_on_borders = true

[node name="AudioLabel" type="Label" parent="CenterContainer/VBoxContainer"]
light_mask = 0
margin_top = 75.0
margin_right = 140.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 3 )
text = "Volume Slider"
align = 1

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 140.0
margin_bottom = 105.0

[node name="Control3" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 140.0
margin_bottom = 113.0

[node name="ResumeBtn" type="Button" parent="CenterContainer/VBoxContainer"]
light_mask = 0
margin_top = 121.0
margin_right = 140.0
margin_bottom = 147.0
theme = ExtResource( 2 )
text = "Resume Game"

[node name="RestartBtn" type="Button" parent="CenterContainer/VBoxContainer"]
light_mask = 0
margin_top = 155.0
margin_right = 140.0
margin_bottom = 181.0
theme = ExtResource( 2 )
text = "Quit Current Game"

[node name="QuitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
light_mask = 0
margin_top = 189.0
margin_right = 140.0
margin_bottom = 215.0
theme = ExtResource( 2 )
text = "Quit Game"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/VolSlider" to="pauseAudio" method="_on_VolSlider_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/RestartBtn" to="." method="_on_RestartBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
